<resources>
    <string name="app_name">Dnevnjak</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="back">Back</string>
    <string name="exit">Exit</string>
    <string name="calendar">Calendar</string>
    <string name="schedule">Schedule</string>
    <string name="account">Account</string>
    <string name="dnevnjakTag">DNEVNJAK</string>
    <string name="dnevnjakSharedPreferences">DNEVNJAK_SP</string>
    <string name="userSharedPreference">USER_SP</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="changePassword">Change Password</string>
    <string name="logout">Logout</string>
    <string name="dnevnjak">Dnevnjak</string>
    <string name="confirm">Confirm</string>
    <string name="oldPass">Old Password</string>
    <string name="newPass">New Password</string>
    <string name="confirmNewPass">Confirm New Password</string>
    <string name="toolbar">Toolbar</string>
    <string name="showPastObligations">Show Past Obligations</string>
    <string name="low">Low</string>
    <string name="mid">Mid</string>
    <string name="high">High</string>
    <string name="add">Add</string>
    <string name="title">Title</string>
    <string name="time">Time</string>
    <string name="description">Description</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="startTime">Start Time</string>
    <string name="endTime">End Time</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="argObligation">ARG_OBLIGATION</string>
    <string name="extraObligation">EXTRA_OBLIGATION</string>
    <string name="fragments">Fragments</string>
    <string name="save">Save</string>
    <string name="stateObligation">STATE_OBLIGATION</string>
    <string name="stateObligationList">STATE_OBLIGATION_LIST</string>
    <string name="zero">0</string>
    <string name="extraDate">EXTRA_DATE</string>
    <string name="extraToolbarDate">EXTRA_TOOLBAR_DATE</string>
</resources>