<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AddObligationActivity">


    <LinearLayout
        android:paddingHorizontal="15dp"
        android:paddingVertical="25dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical">


        <RadioGroup
            android:layout_margin="5dp"
            android:id="@+id/radioGroupPriority"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButtonLow"
                style="@style/MyTextStyle"
                android:textColor="@color/black"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:button="@null"
                android:text="@string/low"
                android:background="#19E134" />

            <RadioButton
                android:id="@+id/radioButtonMid"
                style="@style/MyTextStyle"
                android:textColor="@color/black"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:button="@null"
                android:text="@string/mid"
                android:background="#DEE428"/>

            <RadioButton
                android:id="@+id/radioButtonHigh"
                style="@style/MyTextStyle"
                android:textColor="@color/black"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:button="@null"
                android:text="@string/high"
                android:background="#DD0F8B"/>

        </RadioGroup>

        <EditText
            android:padding="10dp"
            style="@style/MyTextStyle"
            android:textColor="@color/white"
            android:id="@+id/editTextTitle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/title" />

        <LinearLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <EditText
                style="@style/MyTextStyle"
                android:id="@+id/editTextStartTime"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/startTime"
                android:inputType="time" />

            <EditText
                style="@style/MyTextStyle"
                android:id="@+id/editTextEndTime"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/endTime"
                android:inputType="time" />
        </LinearLayout>

        <EditText
            android:layout_margin="5dp"
            android:id="@+id/editTextDescription"
            style="@style/MyTextStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:ems="10"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:textColor="@color/black" />

        <LinearLayout

            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:padding="10dp">

            <Button
                android:id="@+id/buttonCreate"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/create"
                style="@style/GreenButtonStyle"
                />

            <Button
                android:id="@+id/buttonCancel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/cancel"
                style="@style/RedButtonStyle"
                />
        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>