<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="80dp"
    android:layout_marginBottom="100dp"
    android:padding="10dp"
    tools:context=".fragment.AccountFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageViewAccount"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:src="@drawable/account_big" />

        <TextView
            android:theme="@style/MyTextStyle"
            android:id="@+id/textViewUsername"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:textAlignment="center"
            android:text="@string/username" />

        <TextView
            android:theme="@style/MyTextStyle"
            android:id="@+id/textViewEmail"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:textAlignment="center"
            android:text="@string/email" />

        <Button
            android:id="@+id/buttonChangePassword"
            android:layout_width="300dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textAlignment="center"
            android:layout_weight="1"
            android:text="@string/changePassword" />

        <Button
            android:id="@+id/buttonLogout"
            android:layout_width="300dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:textAlignment="center"
            android:layout_marginBottom="15dp"
            android:text="@string/logout" />
    </LinearLayout>
</FrameLayout>