<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ObligationDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        android:padding="5dp"
        android:layout_margin="5dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorSecondaryVariant"
            android:gravity="center"
            android:minHeight="?attr/actionBarSize"
            android:textAlignment="center"
            app:flow_horizontalAlign="center">

            <TextView
                android:id="@+id/textViewToolbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/toolbar"
                android:theme="@style/MyTextStyle" />
        </androidx.appcompat.widget.Toolbar>

        <RadioGroup
            android:layout_margin="5dp"
            android:padding="5dp"
            android:id="@+id/radioGroupPriority"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButtonLow"
                style="@style/MyTextStyle"
                android:textColor="@color/black"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:button="@null"
                android:text="@string/low"
                android:background="#19E134" />

            <RadioButton
                android:id="@+id/radioButtonMid"
                style="@style/MyTextStyle"
                android:textColor="@color/black"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:button="@null"
                android:text="@string/mid"
                android:background="#DEE428"/>

            <RadioButton
                android:id="@+id/radioButtonHigh"
                style="@style/MyTextStyle"
                android:textColor="@color/black"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:button="@null"
                android:text="@string/high"
                android:background="#DD0F8B"/>

        </RadioGroup>

        <TextView
            style="@style/MyTextStyle"
            android:id="@+id/textViewTime"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:text="TextView" />

        <TextView
            style="@style/MyTextStyle"
            android:id="@+id/textViewTitle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:text="TextView" />

        <TextView
            style="@style/MyTextStyle"
            android:textSize="14sp"
            android:gravity="start|top"
            android:textAlignment="textStart"
            android:id="@+id/textViewDescription"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:ems="10"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:hint="@string/description"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:padding="5dp"
            android:layout_margin="5dp">

            <Button
                android:id="@+id/buttonEdit"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/edit"
                android:padding="5dp"
                android:layout_margin="5dp"/>

            <Button
                android:id="@+id/buttonDelete"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/delete"
                android:padding="5dp"
                android:layout_margin="5dp"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>