<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ChangePasswordActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_marginBottom="2dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewOldPass"
            android:layout_width="300dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/oldPass"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/editTextOldPass"
            android:layout_width="300dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/oldPass"
            android:inputType="textPassword"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textViewNewPass"
            android:layout_width="300dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/newPass"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/editTextNewPass"
            android:layout_width="300dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/newPass"
            android:inputType="textPassword"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textViewConfirmNewPass"
            android:layout_width="300dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/confirmNewPass"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/editTextConfirmNewPass"
            android:layout_width="300dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/confirmNewPass"
            android:inputType="textPassword"
            android:textAlignment="center" />

        <Button
            android:id="@+id/buttonConfirm"
            android:layout_width="300dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/confirm"
            android:textAlignment="center" />

        <Button
            android:id="@+id/buttonBack"
            android:layout_width="300dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/back"
            android:textAlignment="center" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>