<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="0dp"
    android:padding="0dp"
    tools:context=".fragment.ScheduleFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <CheckBox
            android:id="@+id/checkBoxShowPastObligations"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:button="@null"
            android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
            android:text="@string/showPastObligations"
            android:textAlignment="center" />

        <androidx.appcompat.widget.SearchView

            style="@style/MyTextStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <RadioGroup
            android:id="@+id/radioGroupPriority"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButtonLow"
                style="@style/MyTextStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#19E134"
                android:button="@null"
                android:text="@string/low"
                android:textColor="@color/black" />

            <RadioButton
                android:id="@+id/radioButtonMid"
                style="@style/MyTextStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#DEE428"
                android:button="@null"
                android:text="@string/mid"
                android:textColor="@color/black" />

            <RadioButton
                android:id="@+id/radioButtonHigh"
                style="@style/MyTextStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#DD0F8B"
                android:button="@null"
                android:text="@string/high"
                android:textColor="@color/black" />

        </RadioGroup>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewObligations"
            android:layout_width="match_parent"
            android:layout_height="432dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_margin="5dp"
            android:id="@+id/floatingActionButtonAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:clickable="true"
            android:src="@mipmap/add_foreground"
            app:maxImageSize="100dp"
            tools:layout_editor_absoluteX="38dp"
            tools:layout_editor_absoluteY="172dp" />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>